--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
   text-align: center;
+  background-image: linear-gradient(to bottom, lightpink, lightblue,lightyellow);
+  height: 100vh;
+  width: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  margin-top: 10%;
+
 }
 
-.App-link {
-  color: #61dafb;
+button{
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 17px;
+  background-color: rgb(33, 100, 112);
+  margin-top: 2%;
 }
+ button:hover{
+   background-color: aqua;
+   cursor: pointer;
+ }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ .left{
+   float: left;
+   margin-left: 20%;
+ }
+ .right{
+   float: right;
+   margin-right: 20%;
+ }
+ 
+
+
+
+
+
